@@ -53,7 +53,6 @@ public:
 	public:
 		virtual void period(long slice);
 		virtual bool publish(MappedRegistry *rr, const char *msgtype, const char *event, const char *expires, const char *msgbody);
-		virtual bool classifier(rtpproxy::session *session, rtpproxy::session *source, struct sockaddr *addr); 
 		virtual void activating(MappedRegistry *rr);
 		virtual void expiring(MappedRegistry *rr);
 		virtual void registration(int id, regmode_t reg);
